--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "yt-search": "^2.12.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "npm run start"
   },
-  "author": "SSRR",
+  "author": "rifki",
   "license": "XX",
   "engines": {
     "node": "20.x"
