--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "yt-search": "^2.12.1"
   },
   "scripts": {
-    "start": "npm run start"
+    "start": "node index.js"
   },
   "author": "rifki",
   "license": "XX",
